@@ -48,9 +48,13 @@ class KingdomHearts2:
                                 "type": "boss", "possible_values": [False, True], "hidden_values": []},
             "bosses_replace_enemies": {"display_name": "Bosses Can Replace Enemies (Experimental)", "description": "Replaces 0.5 percent of enemies in the game with a random boss. This option is intended for PC use only.",
                     "type": "boss", "possible_values": [False, True], "hidden_values": [], "experimental": True},
-            "cups_bosses": {"display_name": "Randomize Cups Bosses", "description": "Include the coliseum bosses in the randomization pool. In 'One for One'.",
+            "cups_bosses": {"display_name": "Randomize Cups Bosses", "description": "Include the coliseum bosses in the randomization pool'.",
                                 "type": "boss", "possible_values": [True, False], "hidden_values": []},
-            "data_bosses": {"display_name": "Randomize Superbosses", "description": "Include the Data versions of organization members in the pool, as well as Terra and Sephiroth",
+            "data_bosses": {"display_name": "Randomize Data Bosses", "description": "Include the Data versions of organization members in the pool",
+                                "type": "boss", "possible_values": [False, True], "hidden_values": []},        
+            "sephiroth": {"display_name": "Randomize Sephiroth", "description": "Include Sephiroth in the boss randomization pool",
+                                "type": "boss", "possible_values": [False, True], "hidden_values": []},
+            "terra": {"display_name": "Randomize Terra", "description": "Include Terra in the boss randomization pool",
                                 "type": "boss", "possible_values": [False, True], "hidden_values": []},
             # "lua_bosses": {"display_name": "Advanced Boss Replacements (Must setup LuaBackend hook)", "description": "Takes advantage of Lua scripting and other methods to include bosses that are more difficult to randomize (ex: Final Xemnas). Generates a lua script that must be loaded via ModManager.",
             #                     "type": "boss", "possible_values": [False, True], "hidden_values": []},
