@@ -1,0 +1,273 @@
+---
+WorkSize: 16
+StackSize: 512
+TempSize: 512
+Triggers:
+- Key: 10
+  Addr: TR10
+- Key: 6
+  Addr: TR6
+- Key: 3
+  Addr: TR3
+Name: tt_dusk_ignore
+
+---
+; codeLabels: 
+; codeRevealer: -l 366
+ section .text
+TR10:
+ popToSp 0
+ popToSp 4
+ pushFromFSp 4
+ dup 
+ pushImm 123
+ sub 
+ jnz L44
+ dup 
+ pushImm 20
+ sub 
+ jnz L44
+ jmp L53
+L44:
+ pushFromPWp W0
+ pushImm -1
+ gosub 4, L55
+ jmp L53
+L53:
+ drop 
+ ret 
+L55:
+ popToSp 4
+ popToSp 0
+ syscall 4, 55 ; trap_mission_is_lock (0 in, 1 out)
+ eqz 
+ jnz L77
+ pushImm 4
+ popToSpVal 0
+ pushFromFSp 4
+ popToSpVal 4
+ syscall 4, 54 ; trap_mission_lock (0 in, 0 out)
+ jmp L77
+L77:
+ ret 
+TR6:
+ popToSp 0
+ popToSp 4
+ pushFromFSp 0
+ gosub 4, L111
+ memcpyToSp 16, 16
+ pushFromPSp 16
+ gosub 12, L131
+ memcpyToSp 16, 32
+ pushFromPSp 32
+ syscall 1, 130 ; trap_obj_cmp (2 in, 1 out)
+ eqz 
+ jnz L110
+ pushImm 0
+ syscall 4, 6 ; trap_mission_increment_count (1 in, 0 out)
+ jmp L110
+L110:
+ ret 
+L111:
+ popToSp 0
+ pushFromPSp 16
+ pushFromFSpVal 16
+ gosub 12, L122
+ pushFromPSp 16
+ ret 
+L122:
+ popToSp 4
+ popToSp 0
+ pushFromFSp 4
+ popToSpVal 4
+ ret 
+L131:
+ pushFromPSp 0
+ pushImm 4
+ add 
+ syscall 1, 3 ; trap_sysobj_player (0 in, 1 out)
+ memcpy 0
+ pushFromPSp 0
+ ret 
+TR3:
+ pushFromPSp 0
+ pushImm {obj_id}
+ syscall 1, 114 ; trap_obj_search_by_entry (2 in, 0 out)
+ pushFromPSp 0
+ pushImm 13
+ syscall 1, 211 ; trap_obj_pattern_enable (2 in, 0 out)
+ pushImm 566
+ pushImm 0
+ gosub 8, L170
+ pushFromPWp W0
+ gosub 8, L261
+ ret 
+L170:
+ popToSp 0
+ popToSp 4
+ pushFromPSp 16
+ pushFromFSp 4
+ syscall 1, 114 ; trap_obj_search_by_entry (2 in, 0 out)
+ pushFromPSp 16
+ fetchValue 4
+ syscall 1, 94 ; trap_sysobj_is_exist (1 in, 1 out)
+ syscall 0, 60 ; trap_assert (1 in, 0 out)
+ pushFromPSp 16
+ syscall 1, 84 ; trap_obj_sheet (1 in, 1 out)
+ popToSp 32
+ pushFromFSp 32
+ pushImm 0
+ sub 
+ neqz 
+ syscall 0, 60 ; trap_assert (1 in, 0 out)
+ pushFromFSp 32
+ pushImm 0
+ syscall 1, 229 ; trap_sheet_max_hp (2 in, 1 out)
+ cfti 
+ pushFromFSp 0
+ syscall 4, 12 ; trap_mission_get_gauge_ratio (1 in, 1 out)
+ mulf 
+ citf 
+ popToSp 36
+ pushFromFSp 36
+ pushImm 0
+ sub 
+ info 
+ jnz L235
+ pushImm 1
+ popToSp 36
+ jmp L235
+L235:
+ pushFromFSp 36
+ pushFromPAi L383 ; ___ai: 'INT' (TXT383)
+ syscall 0, 0 ; trap_puti (2 in, 0 out)
+ pushFromFSp 32
+ pushFromFSp 36
+ pushImm 0
+ syscall 1, 231 ; trap_sheet_set_min_hp (3 in, 0 out)
+ pushFromPSp 16
+ pushImm 20
+ pushImm 0
+ syscall 1, 142 ; trap_signal_reserve_min_hp (3 in, 0 out)
+ ret 
+L261:
+ popToSp 0
+ pushFromFSp 0
+ gosub 4, L340
+L267:
+ pushFromFSp 0
+ gosub 4, L353
+ jnz L276
+ halt 
+ jmp L267
+L276:
+ pushFromFSpVal 0
+ dup 
+ pushImm 1
+ sub 
+ jnz L287
+ jmp L293
+L287:
+ pushFromFSpVal 4
+ syscall 4, 3 ; trap_mission_complete (1 in, 0 out)
+ jmp L336
+L293:
+ dup 
+ pushImm 2
+ sub 
+ jnz L302
+ jmp L308
+L302:
+ pushFromFSpVal 4
+ syscall 4, 16 ; trap_mission_dead_boss (1 in, 0 out)
+ jmp L336
+L308:
+ dup 
+ pushImm 3
+ sub 
+ jnz L317
+ jmp L321
+L317:
+ syscall 4, 11 ; trap_mission_failed (0 in, 0 out)
+ jmp L336
+L321:
+ dup 
+ pushImm 4
+ sub 
+ jnz L330
+ jmp L336
+L330:
+ pushFromFSpVal 4
+ syscall 4, 22 ; trap_mission_exit (1 in, 0 out)
+ jmp L336
+L336:
+ drop 
+ gosub 4, L363
+ ret 
+L340:
+ popToSp 0
+ pushImm 0
+ popToSpVal 0
+ pushImm -1
+ popToSpVal 4
+ ret 
+L353:
+ popToSp 0
+ pushFromFSpVal 0
+ pushImm 0
+ sub 
+ eqz 
+ ret 
+L363:
+ halt 
+ jmp L363
+D366:
+L366:
+ ret 
+TXT367:
+ db 'near',0,0
+TXT370:
+ db 'btl_hard',0,0
+TXT375:
+ db 'btl_super_hard',0,0
+L383:
+TXT383:
+ db 'INT',0
+TXT385:
+ db 'btl_attack',0,0
+TXT391:
+ db 'near_wait',0
+TXT396:
+ db 'btl_short',0
+TXT401:
+ db 'rvg_normal',0,0
+TXT407:
+ db 'leave',0
+TXT410:
+ db 'btl_long',0,0
+TXT415:
+ db 'rvg_hard',0,0
+TXT420:
+ db 'rvg_super_hard',0,0
+TXT428:
+ db 'rvg_short',0
+TXT433:
+ db 'rvg_long',0,0
+TXT438:
+ db 'rst_normal',0,0
+TXT444:
+ db 'jump start',0,0
+TXT450:
+ db 'mode_battle',0
+TXT456:
+ db 'rst_hard',0,0
+TXT461:
+ db 'jump end',0,0
+TXT466:
+ db 'rst_super_hard',0,0
+TXT474:
+ db 'btl_normal',0,0
+
+ section .bss
+W0:
+ resb 16
