@@ -2788,7 +2788,7 @@ Iron Hammer:
       - 0
 Jafar:
   enabled: true
-  source_replace_allowed: false
+  source_replace_allowed: true
   aimods: 
   - name: B_AL020/b_al.bdscript
     type: obj
@@ -3859,7 +3859,7 @@ Seifer:
       - 0
 Sephiroth:
   tags:
-  - data
+  - sephiroth
   - solo
   can_be_enemy: true
   enabled: true
@@ -4296,7 +4296,7 @@ Surveillance Robot:
 Terra:
   can_be_enemy: false #expensive
   tags:
-  - data
+  - terra
   enabled: true
   enmp_index: 0xF4
   hp: 100
