@@ -11,6 +11,7 @@
 * Now generating a custom moveset (thanks to DA) for Sora that will allow Twilight Thorn to work without major AI modifications
 * Jafar has been added into the randomization pool for Wild boss replacement mode
 * Demyx OC has been added into the randomization pool
+* Randomize superbosses option has been split into 3 options, for terra, sephiroth, and the datas
 * Cutscene Remover option has been added, with 3 different options (PUT MORE DESCRIPTION HERE)
 
 2.3.0
